# survey_writing

./: README.md  autosurvey_write_outline.py  build_database.py  main.py  main_ver2.py  main_ver3.py  main_ver4.py  main_ver5.py  pyproject.toml  result.json  test_ollama.py
autosurvey_src/: database.py
autosurvey_src/agents/: outline_writer.py
autosurvey_src/survey_writing/: main.py
configs/: faiss.yaml
flow/: write_survey_outline_flow.py
src/: database.py  utils.py
src/agents/: outline_writer.py  outline_writer_bk.py  writer.py
src/survey_writing/crews/writing_crew/config/: agents.yaml
